# cis194

./: README.md  cis194.cabal
app/: Main.hs
notes/: cis194-01.md  cis194-02.md  cis194-03.md  cis194-04.md  cis194-05.md  cis194-06.md  cis194-07.md  cis194-08.md
src/: Intro.hs
src/Week1/: Intro.hs
src/Week10/: AParser.hs
src/Week2/: Log.hs  LogAnalysis.hs
src/Week3/: Golf.hs
src/Week4/: Wholemeal.hs
src/Week5/: Calc.hs  Calc6.hs  Expr.hs  Parser.hs  StackVM.hs
src/Week6/: Fibonacci.hs
src/Week8/: Party.hs
test/: Spec.hs
test/Week1/: IntroSpec.hs
test/Week2/: LogAnalysisSpec.hs  LogAnalysisSpec.hs.save
test/Week3/: GolfSpec.hs
test/Week4/: WholemealSpec.hs
test/Week5/: CalcSpec.hs
test/Week6/: FibonacciSpec.hs
