name:                cis194
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/rriclet/cis194#readme
license:             BSD3
license-file:        LICENSE
author:              Robin Riclet
maintainer:          robinriclet@gmail.com
copyright:           2020 Robin Riclet
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Week1.Intro
                     , Week2.Log
                     , Week2.LogAnalysis
                     , Week3.Golf
                     , Week4.Wholemeal
                     , Week5.Calc
                     , Week5.ExprT
  other-modules:       Week5.Parser
                     , Week5.StackVM
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable cis194
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , cis194
  default-language:    Haskell2010

test-suite cis194-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Week1.IntroSpec
                     , Week2.LogAnalysisSpec
                     , Week3.GolfSpec
                     , Week4.WholemealSpec
                     , Week5.CalcSpec
  build-depends:       base
                     , cis194
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/rriclet/cis194
